<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Booking_details"
            android:textColor="#8489AF"
            android:textSize="20sp"
            android:layout_weight="1" />

        <TextView
            android:layout_weight="1"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waroeng_down_normal"
            android:textColor="#484F87"
            android:textSize="30sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.9dp"
            android:layout_marginTop="10dp"
            android:background="#7b7b7b" />

        <LinearLayout
            android:layout_weight="1"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jumlah_kursi"
                    android:textColor="#8489AF"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/_25_kursi"
                    android:textColor="#486A87"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_and_time"
                    android:textColor="#8489AF"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/_06_may_1pm"
                    android:textColor="#486A87"
                    android:textSize="25sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/manue_package"
            android:textColor="#8489AF"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:background="@mipmap/ic_launcher_round"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chicken_geprek"
                    android:textColor="#486A87"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_pieces"
                    android:textColor="#8489AF"
                    android:textSize="15sp" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="15dp"
                android:text="@string/dvoetocchie"
                android:textColor="#484F87"
                android:textSize="60sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="-10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#4D0D98"
        android:orientation="horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_weight="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:text="@string/price"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/_2x_chicken_geprek"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:layout_marginTop="55dp"
            android:layout_marginStart="45dp"
            android:layout_weight="1"
            android:text="@string/_41_00"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#484F87"
        android:text="@string/people_present"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@mipmap/ic_launcher"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@mipmap/ic_launcher"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@mipmap/ic_launcher"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@mipmap/ic_launcher"/>

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/button1"
            android:text="@string/_20"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:background="@drawable/for_desin"/>

    </LinearLayout>

</LinearLayout>